fixed monogram JF position on mobile device

--- a/style.css
+++ b/style.css
@@ -959,8 +959,8 @@ img {
   }
 
   .hero__monogram {
-    top: -0.35rem;
-    left: -0.75rem;
+    top: -11.35rem;
+    left: 16rem;
     font-size: 7.8rem;
     color: rgba(246, 238, 225, 0.028);
   }
